# lithify

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  quickstart.py
examples/schemas/: 01_user.yaml  02_product.yaml
src/lithify/: __init__.py  __main__.py  bases.py  class_name_rewriter.py  cli.py  common_aliases.py  core.py  enums.py  formatting.py  frozendict.py  nsint_generator.py  nsint_mapper.py  orchestrator.py  packaging.py  pattern_properties.py  pattern_properties_rewriter.py  pattern_validated_base.py  resolver.py  sanitizer.py  slas_alias_generator.py  slas_allof_processor.py  slas_classifier.py  slas_field_mapper.py  slas_rewriter.py  slas_schema_index.py  slas_schema_processor.py  transforms.py  utils.py  validation.py  workspace.py
tests/: test_allof_collapse.py  test_bases.py  test_class_name_rewriter.py  test_cli_commands.py  test_cli_generate.py  test_core.py  test_error_handling.py  test_inline_allof.py  test_inline_allof_regression.py  test_integration_urn_override.py  test_mutability.py  test_nsint.py  test_nsint_regression.py  test_packaging.py  test_pattern_properties.py  test_pattern_properties_regression.py  test_resolver.py  test_sanitizer.py  test_slas.py  test_transforms.py  test_urn_ref_sanitization_regression.py  test_urn_resolver.py  test_utils.py  test_validation.py  test_validation_error_api.py  test_walker_exclusions.py
tests/fixtures/: common_types.yaml  event.yaml  urn_resolver_example.py
tests/fixtures/allof_refinement/: common_types.v1.yaml  document_conflict.v1.yaml  record_valid.v1.yaml
tests/fixtures/class_name_override/: user_profile.yaml
tests/fixtures/pattern_properties/: flexible_data.v1.yaml  immutable_extensible.v1.yaml  multi_pattern.v1.yaml
tests/fixtures/urn_allof_dotted/: entity.v1.schema.json  types.v1.schema.json
tests/fixtures/urn_with_override/: common_types.json  system_record.json
